# LAD2025

01_TerminalProject/: Makefile  Show.c  a.out  show
02_Multifile/: Makefile  const.c  outlib.h  prog.c
03_Text/: randomize.sh
04_Debugging/: 1.gdb  2.gdb  Makefile  main.c
05_Regexps/: Makefile  main.c
07_Environmental/: Makefile.am  autogen.sh  configure.ac
07_Environmental/src/: Makefile.am  rhasher.c
08_I18n/: configure.ac
08_I18n/po/: ru.po
08_I18n/src/: Makefile.am  main.c
09_PatchDiff/: Makefile  main.c
09_PatchDiff/patches/: 01.patch  02.patch  03.patch
10_LibTesting/: Makefile.am  configure.ac
10_LibTesting/src/: Makefile.am
10_LibTesting/tests/: Makefile.am  unit.ts
11_Documenting/: Doxyfile.in  Makefile.am  configure.ac
11_Documenting/doc/: README.md  guessr.1
11_Documenting/po/: ru.po
11_Documenting/src/: main.c
12_InstallPackaging/: Makefile.am  configure.ac
12_InstallPackaging/doc/: Makefile.am
12_InstallPackaging/po/: Makefile.am  Makevars  greeter.pot  ru.po
12_InstallPackaging/src/: Makefile.am  hello.c  strutil.c  strutil.h
12_InstallPackaging/tests/: Makefile.am  test_strutil.c
